# rustiny

./: .gitignore  Cargo.toml  LICENSE  README.md  TEX.md  helper.sh  main.sh
.cargo/: config.toml
bits/: Cargo.toml
bits/.cargo/: config.toml
bits/examples/: simple.rs
bits/html/: katex_header.html
bits/src/: lib.rs  tex.rs
computer_graphic/: Cargo.toml  README.md
computer_graphic/examples/: simple.rs
computer_graphic/src/: lib.rs
computer_graphic/src/color/: mod.rs  mod_inner.rs  ops.rs  types.rs
computer_graphic/src/line/: bresenham.rs  mod.rs
computer_graphic/src/point/: mod.rs  mod_inner.rs  types.rs
fixed_point/: Cargo.toml  README.md
fixed_point/examples/: simple.rs
fixed_point/src/: convert.rs  fmt.rs  from.rs  into.rs  lib.rs  lib_inner.rs  number.rs  ops_abs.rs  ops_add.rs  ops_cmp.rs  ops_div.rs  ops_mul.rs  ops_neg.rs  ops_ones.rs  ops_rem.rs  ops_shl.rs  ops_shr.rs  ops_sqrt.rs  ops_sub.rs  ops_tofxx.rs  ops_zeros.rs
fixed_point/src/cmp/: cmp.rs  mod.rs
fixed_point/src/convert/: from.rs  mod.rs  tofxx.rs  try_from.rs
fixed_point/src/fmt/: binary.rs  debug.rs  display.rs  mod.rs
fixed_point/src/ops/: abs.rs  add.rs  div.rs  mod.rs  mul.rs  neg.rs  ones.rs  rem.rs  shl.rs  shr.rs  sqrt.rs  sub.rs  zeros.rs
fixed_point/src/types/: mod.rs
linear_algebra/: Cargo.toml  README.md
linear_algebra/examples/: simple.rs
linear_algebra/src/: lib.rs
linear_algebra/src/matrix/: convert.rs  fmt.rs  mod.rs  mod_inner.rs  ops_add.rs  ops_mul.rs  ops_mul_scalar.rs  ops_sub.rs  ops_transpose.rs
linear_algebra/src/matrix/convert/: mod.rs
linear_algebra/src/matrix/fmt/: mod.rs
linear_algebra/src/matrix/ops/: add.rs  mod.rs  mul.rs  mul_scalar.rs  sub.rs  transpose.rs
linear_algebra/src/matrix/types/: mod.rs
linear_algebra/src/vector/: from.rs  mod.rs  mod_inner.rs  ops_cross.rs  ops_dot.rs  ops_xyzw.rs
linear_algebra/src/vector/convert/: mod.rs
linear_algebra/src/vector/ops/: cross.rs  dot.rs  mod.rs  xyzw.rs
linear_algebra/src/vector/types/: mod.rs
number/: Cargo.toml  README.md
number/examples/: simple.rs
number/html/: katex_header.html
number/src/: lib.rs  lib_inner.rs  ops_abs.rs  ops_add.rs  ops_div.rs  ops_mul.rs  ops_neg.rs  ops_ones.rs  ops_pow.rs  ops_rem.rs  ops_shl.rs  ops_shr.rs  ops_sub.rs  ops_tofxx.rs  ops_zeros.rs
number/src/convert/: mod.rs
number/src/ops/: div.rs  mod.rs  mul.rs  neg.rs  shl.rs  sqrt.rs  sub.rs  zeros.rs
number/src/types/: float.rs  integer.rs  mod.rs  number.rs  signed.rs  unsigned.rs
renderer/: Cargo.toml  README.md
renderer/src/: main.rs
src/: main.rs
xfile/: Cargo.toml  README.md
xfile/examples/: simple.rs
xfile/html/: mathjax_header.html
xfile/src/: lib.rs
xfile/src/tga/: color.rs  error.rs  header.rs  image.rs  mod.rs
