[package]
name = "rustiny_computer_graphic"
description = "tiny computer graphic"
version = "0.2.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/wolfired/rustiny/computer_graphic"
repository = "https://github.com/wolfired/rustiny/computer_graphic"
documentation = "https://docs.rs/rustiny_computer_graphic"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./html/katex_header.html"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustiny_number = { path = "../number", version = "0.2.0" }
rustiny_fixed_point = { path = "../fixed_point", version = "0.2.0" }
rustiny_linear_algebra = { path = "../linear_algebra", version = "0.2.0" }
