[package]
name = "rustiny_fixed_point"
description = "tiny fixed point"
version = "0.2.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/wolfired/rustiny/tree/main/fixed_point"
repository = "https://github.com/wolfired/rustiny/tree/main/fixed_point"
documentation = "https://docs.rs/rustiny_fixed_point"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./html/katex_header.html"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustiny_number = { path = "../number", version = "0.2.0" }
