[package]
name = "rustiny_linear_algebra"
description = "tiny linear algebra"
version = "0.2.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/wolfired/rustiny/tree/main/linear_algebra"
repository = "https://github.com/wolfired/rustiny/tree/main/linear_algebra"
documentation = "https://docs.rs/rustiny_linear_algebra"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./html/katex_header.html"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustiny_number = { path = "../number", version = "0.2.0" }

[dev-dependencies]
rustiny_fixed_point = { path = "../fixed_point", version = "0.2.0" }
