[package]
name = "rustiny_renderer"
description = "tiny renderer"
version = "0.2.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/wolfired/rustiny/tree/main/renderer"
repository = "https://github.com/wolfired/rustiny/tree/main/renderer"
documentation = "https://docs.rs/rustiny_renderer"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./html/katex_header.html"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustiny_computer_graphic = { path = "../computer_graphic", version = "0.2.0" }
rustiny_xfile = { path = "../xfile", version = "0.2.0" }
rustiny_fixed_point = { path = "../fixed_point", version = "0.2.0" }
rustiny_linear_algebra = { path = "../linear_algebra", version = "0.2.0" }
rustiny_number = { path = "../number", version = "0.2.0" }
