[package]
name = "rustiny_xfile"
description = "tiny xfile"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/wolfired/rustiny/tree/main/xfile"
repository = "https://github.com/wolfired/rustiny/tree/main/xfile"
documentation = "https://docs.rs/rustiny_xfile"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./html/katex_header.html"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
